tests/ui/discord-frontend/entity_macro/expected_literal_11.stderr
error: unexpected end of input, expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_11.rs:39:33
   |
LL |     overrides = ["ChannelFlags":],
   |                                 ^

error: aborting due to 1 previous error

